[gd_scene load_steps=3 format=1]

[ext_resource path="res://ui/inventory_screen.gd" type="Script" id=1]
[ext_resource path="res://globals/white.png" type="Texture" id=2]

[node name="inventory" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -148.0
margin/right = 1281.0
margin/bottom = 860.0
script/script = ExtResource( 1 )

[node name="Menu" type="TabContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 254.0
margin/top = 237.0
margin/right = 1033.0
margin/bottom = 763.0
tab_align = 0
tabs_visible = true

[node name="Inventory" type="Tabs" parent="Menu"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 32.0
margin/right = 735.0
margin/bottom = 473.0

[node name="item" type="Control" parent="Menu/Inventory"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -258.0
margin/top = -269.0
margin/right = -218.0
margin/bottom = -229.0

[node name="icon" type="Sprite" parent="Menu/Inventory/item"]

transform/pos = Vector2( 1, -2 )

[node name="title" type="Label" parent="Menu/Inventory/item"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -37.0
margin/top = -89.0
margin/right = 55.0
margin/bottom = -58.0
text = "this is an item"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="points" type="Label" parent="Menu/Inventory/item"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 64.0
margin/top = -90.0
margin/right = 104.0
margin/bottom = -76.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="i" type="Node2D" parent="Menu/Inventory"]

transform/pos = Vector2( -258, -269 )

[node name="c" type="Node2D" parent="Menu/Inventory"]

transform/pos = Vector2( -258, -269 )

[node name="item_cursor" type="Sprite" parent="Menu/Inventory"]

transform/pos = Vector2( -410.879, 6.26199 )
texture = ExtResource( 2 )
modulate = Color( 0.183382, 0.179504, 0.675781, 0.404353 )

[node name="clue_cursor" type="Sprite" parent="Menu/Inventory"]

transform/pos = Vector2( -261.955, 155.489 )
transform/scale = Vector2( 7.1141, 1 )
texture = ExtResource( 2 )
modulate = Color( 0.183382, 0.179504, 0.675781, 0.404353 )

[node name="clue" type="TextureFrame" parent="Menu/Inventory"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -228.0
margin/top = -100.0
margin/right = -188.0
margin/bottom = -60.0
stretch_mode = 0

[node name="title" type="Label" parent="Menu/Inventory/clue"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -223.0
margin/top = -14.0
margin/right = 206.0
margin/bottom = 23.0
text = "this is a clue"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="item_slots" type="Position2D" parent="Menu/Inventory"]

editor/display_folded = true
transform/pos = Vector2( 23.294, 88.169 )

[node name="Position2D" type="Position2D" parent="Menu/Inventory/item_slots"]

transform/pos = Vector2( 92.5309, 68.4729 )

[node name="Position2D1" type="Position2D" parent="Menu/Inventory/item_slots"]

transform/pos = Vector2( 203.568, 66.6223 )

[node name="Position2D2" type="Position2D" parent="Menu/Inventory/item_slots"]

transform/pos = Vector2( 92.5309, 149.9 )

[node name="Position2D3" type="Position2D" parent="Menu/Inventory/item_slots"]

transform/pos = Vector2( 209.12, 146.199 )

[node name="Position2D4" type="Position2D" parent="Menu/Inventory/item_slots"]

transform/pos = Vector2( 85.1284, 240.58 )

[node name="Position2D5" type="Position2D" parent="Menu/Inventory/item_slots"]

transform/pos = Vector2( 214.672, 244.282 )

[node name="Position2D6" type="Position2D" parent="Menu/Inventory/item_slots"]

transform/pos = Vector2( 86.979, 336.813 )

[node name="Position2D7" type="Position2D" parent="Menu/Inventory/item_slots"]

transform/pos = Vector2( 209.12, 333.111 )

[node name="clue_slots" type="Position2D" parent="Menu/Inventory"]

editor/display_folded = true
transform/pos = Vector2( 430.43, 93.721 )

[node name="Position2D" type="Position2D" parent="Menu/Inventory/clue_slots"]

transform/pos = Vector2( 74.0247, 62.921 )

[node name="Position2D1" type="Position2D" parent="Menu/Inventory/clue_slots"]

transform/pos = Vector2( 75.8753, 140.647 )

[node name="Position2D2" type="Position2D" parent="Menu/Inventory/clue_slots"]

transform/pos = Vector2( 81.4272, 222.074 )

[node name="Position2D3" type="Position2D" parent="Menu/Inventory/clue_slots"]

transform/pos = Vector2( 81.4273, 309.053 )

[node name="hand_pos" type="Position2D" parent="Menu/Inventory"]

transform/pos = Vector2( 286.479, 24.952 )

[node name="Map" type="Tabs" parent="Menu"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0

[node name="Office" type="Button" parent="Menu/Map"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 99.0
margin/top = 77.0
margin/right = 249.0
margin/bottom = 177.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Go to Squash Squad Office"
flat = false

[node name="Waldorf" type="Button" parent="Menu/Map"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 507.0
margin/top = 69.0
margin/right = 662.0
margin/bottom = 169.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Go to Waldorf's House"
flat = false

[node name="Options" type="Tabs" parent="Menu"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 32.0
margin/right = 735.0
margin/bottom = 473.0


